# CondorEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CondorEngine.sln  Doxyfile  README.md
CondorEngine/: CondorEngine.cpp  CondorEngine.vcxproj  CondorEngine.vcxproj.filters  application.cpp  application.h  camera.cpp  camera.h  component.cpp  component.h  context.cpp  context.h  core.cpp  core.h  debug.h  debug.hpp  diagnostics.cpp  diagnostics.h  importer.cpp  importer.h  material.cpp  material.h  math.cpp  math.h  object.cpp  object.h  physics.cpp  physics.h  primitive.cpp  primitive.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sceneobject.cpp  sceneobject.h  time.cpp  time.h
CondorEngine/components/: camera.cpp  camera.h  collider.cpp  collider.h  light.cpp  light.h  mesh.cpp  mesh.h  rigidbody.cpp  rigidbody.h
CondorEngine/sceneobjects/: primitive.cpp  primitive.h  scenelight.cpp  scenelight.h  spectatorcam.cpp  spectatorcam.h
CondorEngine/scenes/: defaultscene.cpp  defaultscene.h
CondorEngine/shaders/: basic.frag  basic.vert  diffuse.frag  normal.frag  phong.frag  phong_multi-light.frag
demo/: CMakeLists.txt
demo/include/: suzane.h
demo/src/: Demo.cpp  suzane.cpp
docs/html/: __features_8hpp_source.html  __fixes_8hpp_source.html  __matrix__vectorize_8hpp_source.html  __noise_8hpp_source.html  __swizzle_8hpp_source.html  __swizzle__func_8hpp_source.html  __vectorize_8hpp_source.html  _android_j_n_i_i_o_system_8h_source.html  _bundled_asset_i_o_system_8h_source.html  _condor_engine_2components_2camera_8h_source.html  _condor_engine_2components_2light_8h_source.html  _condor_engine_2components_2mesh_8h_source.html  _condor_engine_2material_8h_source.html  _condor_engine_2scene_8h_source.html  _condor_engine_8cpp.html  _condor_engine_8cpp_source.html  annotated.html  application_8cpp.html  application_8cpp_source.html  application_8h.html  application_8h_source.html  assimp_2include_2assimp_2quaternion_8inl.html  assimp_2out_2install_2x64-_debug_2include_2assimp_2quaternion_8inl.html  assimp_2out_2install_2x64-_release_2include_2assimp_2quaternion_8inl.html  associated__min__max_8hpp.html  associated__min__max_8hpp__incl.map  associated__min__max_8hpp__incl.md5  associated__min__max_8hpp_source.html  bit_8hpp.html  bit_8hpp__incl.map  bit_8hpp__incl.md5  bit_8hpp_source.html  bitfield_8hpp.html  bitfield_8hpp__dep__incl.map  bitfield_8hpp__dep__incl.md5  bitfield_8hpp__incl.map  bitfield_8hpp__incl.md5  bitfield_8hpp_source.html  build_2x64-_debug_2include_2assimp_2config_8h.html  build_2x64-_debug_2include_2assimp_2config_8h_source.html  (+6885 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+75 more)
include/: CondorEngine.hpp
include/CondorEngine/: Rendering.hpp  application.h  component.h  debug.hpp  diagnostics.h  material.h  math.hpp  object.h  pch.h  physics.h  renderer.h  resourcemanager.h  scene.h  sceneobject.h  time.hpp
include/CondorEngine/components/: camera.h  collider.h  light.h  mesh.h  rigidbody.h
include/CondorEngine/materials/: depth.hpp  diffuse.hpp  normal.hpp  phong.hpp  shadow.hpp  unlit.hpp  uv.hpp  vertexcolor.hpp
include/CondorEngine/rendering/: renderer.h  renderfeature.h
include/CondorEngine/rendering/renderers/: defaultrenderer.hpp
include/CondorEngine/rendering/renderfeatures/: colorrenderfeature.hpp  directionalshadowmappingrenderfeature.hpp  monorenderfeature.hpp
include/CondorEngine/sceneobjects/: primitive.h  scenelight.h  spectatorcam.h  suzane.h
include/CondorEngine/scenes/: defaultscene.h
resources/shaders/: basic.vert  diffuse.frag  directional.vert  normal.frag  phong.frag  phong_multi-light.frag  shadow.frag  unlit.frag  uv.frag
samples/: CMakeLists.txt
samples/toon/: CMakeLists.txt  Toon.cpp  toonmat.hpp  toonrenderer.hpp  toonsceneobjects.hpp
samples/toon/resources/meshes/: ground.mtl
samples/toon/shaders/: toon.frag
samples/toon/source_art/meshes/: toon_scene.blend
shaders/: common.glsl  depth.frag  diffuse.frag  directional.vert  phong.frag  shadow.glsl  test.frag  vertexcolor.frag
src/: CondorEngine.cpp
src/components/: camera.cpp  collider.cpp  light.cpp  mesh.cpp  rigidbody.cpp
src/core/: CondorEngine.cpp  application.cpp  component.cpp  debug.cpp  diagnostics.cpp  material.cpp  math.cpp  object.cpp  physics.cpp  renderer.cpp  resourcemanager.cpp  scene.cpp  sceneobject.cpp  time.cpp
src/rendering/: renderer.cpp  renderfeature.cpp
src/rendering/renderfeatures/: directionalshadowrenderfeature.cpp
src/sceneobjects/: primitive.cpp  scenelight.cpp  spectatorcam.cpp  suzane.cpp
src/scenes/: defaultscene.cpp
tools/: CMakeLists.txt
tools/copy_resources/: CMakeLists.txt
tools/shader_preprocessor/: CMakeLists.txt  shader_preprocessor.cpp
